--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -86,7 +86,7 @@
         "max-depth": "error",
         "max-len": "off",
         "max-lines": "off",
-        "max-lines-per-function": "error",
+        "max-lines-per-function": "off",
         "max-nested-callbacks": "error",
         "max-params": "error",
         "max-statements": "off",
