--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.17.1",
     "fs-extra": "^10.0.0",
     "morgan": "^1.10.0",
+    "multiparty": "^4.2.2",
     "mysql2": "^2.2.5",
     "sequelize": "^6.6.2"
   },
