--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "devDependencies": {
     "chai": "^4.3.4",
+    "chai-http": "^4.3.0",
     "eslint": "^7.28.0",
     "eslint-config-google": "^0.14.0",
     "eslinter": "^3.2.1",
