--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "nodemon .",
     "test": "mocha",
     "build": "node .",
+    "kill": "./kill_server.sh",
     "lint": "npx eslint .",
     "lint-fix": "npx eslint . --fix"
   },
