--- a/.gitignore
+++ b/.gitignore
@@ -3,11 +3,13 @@ node_modules
 /dist
 /public
 /test/images
+/keys
 
 
 # local env files
 .env.local
 .env.*.local
+.env
 
 # Log files
 npm-debug.log*
