--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
   "dependencies": {
     "axios": "^0.21.1",
     "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "fs-extra": "^10.0.0",
+    "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
     "multiparty": "^4.2.2",
     "mysql2": "^2.2.5",
