--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "morgan": "^1.10.0",
     "multiparty": "^4.2.2",
     "mysql2": "^2.2.5",
+    "seedrandom": "^3.0.5",
     "sequelize": "^6.6.2"
   },
   "devDependencies": {
