--- a/package.json
+++ b/package.json
@@ -1,40 +1,38 @@
 {
-  "name": "server",
-  "version": "1.0.0",
-  "description": "Express and Sequelize backend for website",
-  "main": "index.js",
-  "scripts": {
-    "dev": "nodemon .",
-    "test": "mocha",
-    "build": "node .",
-    "kill": "./kill_server.sh",
-    "clean": "node clean.js",
-    "lint": "npx eslint .",
-    "lint-fix": "npx eslint . --fix"
-  },
-  "keywords": [],
-  "author": "Jeshwin Prince",
-  "license": "ISC",
-  "dependencies": {
-    "axios": "^0.21.1",
-    "cors": "^2.8.5",
-    "dotenv": "^10.0.0",
-    "express": "^4.17.1",
-    "fs-extra": "^10.0.0",
-    "jsonwebtoken": "^8.5.1",
-    "morgan": "^1.10.0",
-    "multiparty": "^4.2.2",
-    "mysql2": "^2.2.5",
-    "seedrandom": "^3.0.5",
-    "sequelize": "^6.6.2"
-  },
-  "devDependencies": {
-    "chai": "^4.3.4",
-    "chai-http": "^4.3.0",
-    "eslint": "^7.28.0",
-    "eslint-config-google": "^0.14.0",
-    "eslinter": "^3.2.1",
-    "mocha": "^9.0.0",
-    "nodemon": "^2.0.7"
-  }
+	"name": "server",
+	"version": "1.0.0",
+	"description": "Express and Sequelize backend for website",
+	"main": "index.js",
+	"scripts": {
+		"dev": "nodemon .",
+		"test": "mocha",
+		"build": "node .",
+		"kill": "./kill_server.sh",
+		"clean": "node clean.js",
+		"lint": "npx prettier --write ."
+	},
+	"keywords": [],
+	"author": "Jeshwin Prince",
+	"license": "ISC",
+	"dependencies": {
+		"axios": "^0.21.1",
+		"cors": "^2.8.5",
+		"dotenv": "^10.0.0",
+		"express": "^4.17.1",
+		"fs-extra": "^10.0.0",
+		"jsonwebtoken": "^8.5.1",
+		"morgan": "^1.10.0",
+		"multiparty": "^4.2.2",
+		"mysql2": "^2.2.5",
+		"pg": "^8.7.3",
+		"seedrandom": "^3.0.5",
+		"sequelize": "^6.6.2"
+	},
+	"devDependencies": {
+		"chai": "^4.3.4",
+		"chai-http": "^4.3.0",
+		"mocha": "^9.0.0",
+		"nodemon": "^2.0.7",
+		"prettier": "2.7.0"
+	}
 }
